[tool.poetry]
name = "fuuid"
version = "0.1.0"
description = "Functional UUIDs for Python."
authors = ["Phil Demetriou <inbox@philonas.net>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{ include = "fuuid" }]
repository = "https://github.com/kpdemetriou/fuuid"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = "^3.7"
base58 = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
